Fix rounding of on input elements on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,7 @@ body {
   border:1px solid #E8E8E8;
   box-sizing: border-box;
   -webkit-appearance: none;
+  border-radius: 0;
 }
 
 #buttons-wrap {
@@ -80,6 +81,7 @@ body {
 #submit-search-button {
   background-color: #4ECDC4;
   -webkit-appearance: none;
+  border-radius: 0;
 }
 
   #submit-search-button:hover {
